# orchestrator_algorithms

./: .pre-commit-config.yaml  main.py  pyproject.toml
src/orchestrator/: __init__.py
src/orchestrator/algorithms/: __init__.py  two_pointers.py
src/orchestrator/core/: __init__.py
src/orchestrator/utils/: __init__.py
src/tests/: __init__.py
src/tests/algorithms/: __init__.py  test_two_pointers.py
src/tests/core/: __init__.py
